Prevent x overflow in entry content when table element present.

--- a/myreader-frontend/src/app/js/components/EntryList/Entry/EntryContent/EntryContent.css
+++ b/myreader-frontend/src/app/js/components/EntryList/Entry/EntryContent/EntryContent.css
@@ -12,3 +12,9 @@
     word-wrap: break-word;
     background-color: #ebece4;
 }
+
+.my-entry-content table {
+    width: 100%;
+    table-layout: fixed;
+    word-break: break-word;
+}
